// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot with code having been generated 1`] = `
<div>
  <div>
    <button
      aria-controls="organisation-codes-111"
      aria-expanded="true"
      class="btn btn--inverse"
      data-qa-sel="share-with-org-button"
      id="share-organisation-111"
      type="button"
    >
      Share with organisation 
      <span
        class="arrow-icon"
      />
    </button>
    <div
      class="panel organisation-codes mv--b"
      id="organisation-codes-111"
    >
      <h2
        class="h5"
      >
        Generate a code to share the consultation
      </h2>
      <div
        class="organisation-codes__row"
      >
        <div
          class="organisation-codes__name"
        >
          <p>
            Super Magic Club
          </p>
        </div>
        <div
          class="organisation-codes__generate pl--b"
        >
          <span>
            1234 5678 9123
          </span>
          <button
            aria-live="polite"
            class="btn btn--copied"
            data-qa-sel="copy-code-button"
            type="button"
          >
            Copy code
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should match snapshot with no code having been generated 1`] = `
<div>
  <div>
    <button
      aria-controls="organisation-codes-111"
      aria-expanded="true"
      class="btn btn--inverse"
      data-qa-sel="share-with-org-button"
      id="share-organisation-111"
      type="button"
    >
      Share with organisation 
      <span
        class="arrow-icon"
      />
    </button>
    <div
      class="panel organisation-codes mv--b"
      id="organisation-codes-111"
    >
      <h2
        class="h5"
      >
        Generate a code to share the consultation
      </h2>
      <div
        class="organisation-codes__row"
      >
        <div
          class="organisation-codes__name"
        >
          <p>
            Super Magic Club
          </p>
        </div>
        <div
          class="organisation-codes__generate pl--b"
        >
          <button
            aria-live="polite"
            class="btn"
            data-qa-sel="generate-code-button"
            type="button"
          >
            Generate
          </button>
          <span />
        </div>
      </div>
    </div>
  </div>
</div>
`;
